refactor: 강의 목록 조회 관련 함수 네이밍 변경, 강의 목록/상세 조회 응답 데이터 중 현재인원수 네이밍 변경 반영